[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
image = "0.25.6"
indicatif = "0.17.11"
log = "0.4.27"
nalgebra = "0.33.2"
ordered-float = "5.0.0"
pixels = "0.15.0"
rayon = "1.10.0"
winit = "0.29"
winit_input_helper = "0.16.0"

[profile.release]
opt-level = 3
codegen-units = 1
